Fix navbar issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ nav a:hover {
       font-size: 1em;
    }
    #menu ul li {
-      padding-right: 2.5em;
+      padding-right: 1em;
       height: 110px;
    }
 }
